css/style.css
/* ... */
#about a {
  display: inline-block;
  padding: 8px 30px;
  color: #d2691e;
  background: #ffffff;
}

#about a:hover {
  color: #ffffff;
  background: #222222;
}

/* ================================================= */
/* ----------------- Speaker Style ----------------- */
/* ================================================= */

#speaker {
  position: relative;
  padding: 80px 0 90px 0;
  background: #ffffff;
}

#speaker .img-cols,
#speaker .content-cols {
  padding: 0;
}

#speaker .img-col,
#speaker .content-col {
  position: relative;
  top: 50%;
  -moz-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

#speaker .img-col {
  overflow: hidden;
}

#speaker .img-col img {
  transition: 0.3s;
  width: 100%;
  height: 100%;
}

#speaker .img-col:hover img {
  -ms-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

#speaker .content-cols {
  background: #d2691e;
}

#speaker .content-cols-right::before,
#speaker .content-cols-left::before {
  position: absolute;
  content: "";
  width: 40px;
  height: 40px;
  top: calc(50% - 20px);
  background: #d2691e;
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  z-index: 1;
}

#speaker .content-cols-right::before {
  left: -20px;
}

#speaker .content-cols-left::before {
  right: -20px;
}

@media (max-width: 767.98px) {
  #speaker .content-cols-right::before,
  #speaker .content-cols-left::before {
    top: -20px;
    left: calc(50% - 20px);
  }
}

#speaker .content-col {
  padding: 0;
  text-align: left;
}

#speaker .content-col h3 {
  color: #ffffff;
  font-weight: 700;
  margin-bottom: 5px;
}

#speaker .content-col h4 {
  color: #ffffff;
  font-size: 14px;
  font-weight: 400;
  margin-bottom: 15px;
}

@media (max-width: 767.98px) {
  #speaker .row {
    margin-bottom: 30px;
  }

  #speaker .row:last-child {
    margin-bottom: 0;
  }

  #speaker .content-col h3 {
    margin-top: 15px;
  }
}

#speaker .content-col p {
  color: #ffffff;
  font-size: 16px;
  line-height: 25px;
  font-weight: 300;
  margin-bottom: 0px;
}

#speaker .content-col a {
  display: inline-block;
  height: 45px;
  width: 50%;
  font-size: 22px;
  text-align: center;
  color: #d2691e;
  background: #ffffff;
  padding: 6px 0;
}

#speaker .content-col a:hover {
  background: #222222;
  color: #ffffff;
}

#speaker .content-col a:focus {
  color: #fff;
}

@media (max-width: 575.98px) {
  #speaker .content-col a {
    height: auto;
    width: 80%;
    font-size: 15px;
    padding: 5px 0;
  }
}

/* ================================================= */
/* ------------------ Agenda Style ----------------- */
/* ================================================= */

#agenda {
  margin: 0 5rem;
  width: 120%;
  position: relative;
  padding: 90px 15px 55px 0;
  background: #f2f2f2;
}

/* #agenda .container {
  max-width: 700px;
} */
.org-img{
  margin-top: 0px !important;
  width: 300px;
  height: 300px;
}
.image-holder{
  object-fit: fill;
  display: grid;
  align-items: start;
}

#agenda .row {
  padding-top: 45px;
  border-bottom: 1px dotted #666;
}

#agenda .row:first-child {
  padding-top: 0;
}

#agenda .text-right {
  border-right: 1px dotted #666;
}

#agenda h2 {
  margin: 0;
}

@media (max-width: 575.98px) {
  #agenda h2 {
    font-size: 80px;
    font-weight: 400;
  }
  #agenda {
    margin: 0 1rem;
    width: 90%;
    padding: 10% 5% 5% 0; /* Adjusted padding for smaller screens */
  }
  
  .org-img {
    margin-left: 50px;
    width: 300px !important; /* Adjusted width for smaller screens */
    height: 350px !important; /* Adjusted width for smaller screens */
    max-width: none; /* Removed max-width for smaller screens */
    height: auto; /* Added to maintain aspect ratio */
  }
  .commitee-names{
    font-size: 23px !important;
  }
  .position{
    font-size: 18px;
  }
}

/* ================================================= */
/* ------------------ Venue Style ------------------ */
/* ================================================= */

#venue {
  position: relative;
}

#venue .col-md-6 {
  padding: 0;
}

#venue .img-col,
#venue .des-col {
  position: relative;
  top: 50%;
  -moz-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

#venue .img-col {
  overflow: hidden;
}

#venue .img-col img {
  transition: 0.3s;
  width: 100%;
  height: 100%;
}

#venue .img-col:hover img {
  -ms-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

#venue .des-cols {
  background: #d2691e;
}

#venue .des-cols::before {
  position: absolute;
  content: "";
  width: 40px;
  height: 40px;
  top: calc(50% - 20px);
  left: -20px;
  background: #d2691e;
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  z-index: 1;
}

@media (max-width: 767.98px) {
  #venue .des-cols::before {
    top: -20px;
    left: calc(50% - 20px);
  }
}

#venue .des-col {
  padding: 30px;
  color: #ffffff;
}

#venue h2 {
  color: #ffffff;
  font-size: 45px;
  font-weight: 700;

  letter-spacing: 1px;
  margin-bottom: 5px;
}

@media (max-width: 767.98px) {
  #venue h2 {
    font-size: 35px;
  }
}

@media (max-width: 575.98px) {
  #venue h2 {
    font-size: 25px;
  }
}

#venue h4 {
  color: #ffffff;
  font-size: 14px;
  font-weight: 400;
  margin-bottom: 25px;
}

#venue p {
  font-weight: 300;
  margin: 0;
}

/* ================================================= */
/* ------------------ Tickets Style ---------------- */
/* ================================================= */

#ticket {
  position: relative;
  padding: 80px 0 90px 0;
  text-align: center;
}

#ticket .single-ticket {
  position: relative;
  text-align: center;
  background-color: #fff;
}

@media (max-width: 767.98px) {
  #ticket .single-ticket {
    margin-bottom: 35px;
  }
}
/* ... */

